--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,75 @@
+*{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?dv5eyk');
+    src:  url('../fonts/icomoon.eot?dv5eyk#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?dv5eyk') format('truetype'),
+      url('../fonts/icomoon.woff?dv5eyk') format('woff'),
+      url('../fonts/icomoon.svg?dv5eyk#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    font-size: 35px;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-biohazard:before {
+    content: "\e900";
+    color: #fff;
+  }
+  .icon-bird:before {
+    content: "\e901";
+    color: #442b9a;
+  }
+  .icon-hand:before {
+    content: "\e902";
+    color: #442b9a;
+  }
+  .icon-handshake:before {
+    content: "\e903";
+    color: #442b9a;
+  }
+  .icon-person:before {
+    content: "\e904";
+    color: #442b9a;
+  }
+  .icon-playSign:before {
+    content: "\e905";
+  }
+  .icon-send-email:before {
+    content: "\e906";
+    color: #fff;
+  }
+  .icon-tick:before {
+    content: "\e907";
+    color: #442b9a;
+  }
+  .icon-worldBook:before {
+    content: "\e908";
+    color: #442b9a;
+  }
+  
 body{
     direction: ltr;
     font-family: 'Poppins',sans-serif;
-}
-
-main{
-    width: 100vw;
-    height: 100vh;
 }
 
 ul li {
@@ -24,7 +88,7 @@ a{
     background-size: 776px 576px;
     display: flex;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 75px;
 }
 
 .container{
@@ -44,6 +108,7 @@ h1.header-title{
     line-height: 1.5;
     font-weight: 400;
     margin-bottom: 25px;
+    text-align: justify;
 }
 
 nav li a{
@@ -106,4 +171,45 @@ header{
     left: 50%;
     transform: translate(-50%,-50%);
     position: absolute;
+}
+
+.icon{
+    border: 2px solid #432b99;
+    border-radius: 10px;
+    padding: 18px 20px;
+}
+
+.services{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 240px;
+}
+
+.services-col{
+    width: 25%;
+}
+
+.services-col h2{
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.services-col p{
+    font-size: .99rem;
+    line-height: 1.6;
+    width: 80%;
+}
+
+.icon-box{
+    margin-bottom: 40px;
+}
+
+.services-content{
+    display: flex;
+}
+
+.biohazard{
+    background-color: #432b99;
 }
