--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,6 @@
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
@@ -68,6 +70,8 @@
   }
   
 body{
+    width: 100%;
+    min-height: 100vh;
     direction: ltr;
     font-family: 'Poppins',sans-serif;
 }
@@ -85,7 +89,7 @@ a{
     background-image: url(../assets/Oval.png);
     background-position: top right;
     background-repeat: no-repeat;
-    background-size: 776px 576px;
+    background-size: 700px 500px;
     display: flex;
     justify-content: center;
     margin-bottom: 75px;
@@ -96,31 +100,34 @@ a{
 }
 
 h1.header-title{
-    font-size: 2.7rem;
+    font-size: 2.5rem;
     line-height: 1.3;
-    margin: 35px 0;
+    margin: 30px 0;
     font-weight: 500;
 }
 
+.header-text{
+    width: 50%;
+}
+
 .header-text p{
-    width: 80%;
-    font-size: 1.1rem;
+    width: 84%;
+    font-size: 1rem;
     line-height: 1.5;
     font-weight: 400;
     margin-bottom: 25px;
-    text-align: justify;
 }
 
 nav li a{
     margin-right: 20px;
     color: #f7f5fc;
-    font-size: .9rem;
+    font-size: .8rem;
 }
 
 header{
     width: 50%;
     margin-left: auto;
-    margin-top: 40px;
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -129,11 +136,12 @@ header{
 }
 
 .sign-btn{
+    font-size: .9rem;
     color: #f7f5fc;
     background-color: transparent;
     border: none;
     outline: none;
-    padding: 15px 25px;
+    padding: 12px 20px;
     border: 1px solid white;
     border-radius: 5px;
 }
@@ -149,6 +157,7 @@ header{
 }
 
 .header-content{
+    width: 100%;
     display: flex;
 }
 
@@ -156,14 +165,20 @@ header{
     border: 1px solid #432b99;
     background-color: #432b99;
     border-radius: 5px;
+    font-size: .8rem;
     outline: none;
     color: white;
     padding: 15px 45px;
+    font-weight: 600;
 }
 
 .img-content{
-    width: 100%;
+    width: 53%;
     position: relative;
+}
+
+.city-image{
+    width: 100%;
 }
 
 .play-png{
