--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,7 @@ header{
 
 .img-content{
     width: 53%;
+    height: 100%;
     position: relative;
 }
 
@@ -182,10 +183,11 @@ header{
 }
 
 .play-png{
+    width: 20%;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    position: absolute;
 }
 
 .icon{
@@ -198,7 +200,7 @@ header{
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 240px;
+    margin-bottom: 200px;
 }
 
 .services-col{
@@ -212,7 +214,7 @@ header{
 }
 
 .services-col p{
-    font-size: .99rem;
+    font-size: .9rem;
     line-height: 1.6;
     width: 80%;
 }
@@ -227,4 +229,82 @@ header{
 
 .biohazard{
     background-color: #432b99;
+}
+
+.learn{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 500px;
+    background-image: linear-gradient(to bottom,#fefeff 1%,#fcfcfe 3%,#eae8f3);
+    margin-bottom: 60px;
+}
+
+.learn-content{
+    display: flex;
+}
+
+.learn-item::before{
+    content: "\e907";
+    font-family: "icomoon";
+    font-size: 1.2rem;
+    color: #432b99;
+    margin-right: 8px;
+}
+
+.learn-item{
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+
+.learn-items h2{
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.learn-items{
+    width: 50%;
+    margin-left: 60px;
+    margin-top: 55px;
+}
+
+.image-learn{
+    width: 50%;
+}
+
+.image-learn img{
+    width: 100%;
+}
+
+.learn-item-last{
+    margin-bottom: 40px;
+}
+
+.know-more-btn{
+    background-color: #432b99;
+    color: white;
+    border: 1px solid #432b99;
+    border-radius: 5px;
+    padding: 12px 25px;
+    font-size: .9rem;
+    margin-right: 15px;
+    font-weight: 540;
+}
+
+.watch-video{
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.watch-video::after{
+    content: "\e905";
+    font-family: "icomoon";
+    font-size: 1.5rem;
+    border: 1px solid #432b99;
+    vertical-align: middle;
+    border-radius: 50%;
+    margin-left: 10px;
 }
