--- a/style/style.css
+++ b/style/style.css
@@ -238,6 +238,7 @@ header{
     height: 500px;
     background-image: linear-gradient(to bottom,#fefeff 1%,#fcfcfe 3%,#eae8f3);
     margin-bottom: 60px;
+    border-radius: 0 0 80% 80% / 30%;
 }
 
 .learn-content{
@@ -404,6 +405,7 @@ header{
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 90px;
 }
 
 .story-detail-content{
@@ -446,4 +448,59 @@ header{
 
 .first-paragraph{
     margin-bottom: 25px;
+}
+
+.recent-post{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.recent-post h2{
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.recent-post p{
+    font-size: .98rem;
+    font-weight: 500;
+}
+
+.recent-post-detail{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 200px;
+}
+
+.recent-post-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.recent-post-col{
+    width: 31%;
+}
+
+.recent-post-col img{
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+.recent-post-col a{
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.3;
+    color: #2f281e;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.recent-post-col a:hover{
+    color: #472f9b;
+}
+
+.recent-post-col p{
+    font-size: .9rem;
 }
