--- a/style/style.css
+++ b/style/style.css
@@ -504,3 +504,84 @@ header{
 .recent-post-col p{
     font-size: .9rem;
 }
+
+.blue-box{
+    width: 100%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 200px;
+}
+
+.blue-box-content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    background-color: #432b99;
+    border-radius: 8px;
+}
+
+.blue-box-content p{
+    width: 20%;
+    font-weight: 500;
+    line-height: 1.5;
+    color: white;
+    margin-right: 100px;
+}
+
+.blue-box-content input{
+    width: 250px;
+    background-color: transparent;
+    border: none;
+    padding: 15px 0;
+    color: #a295cb;
+}
+
+.blue-box-content input::placeholder{
+    color: #a295cb;
+}
+
+.blue-box-content span{
+    color: #a295cb;
+    font-size: 1.8rem;
+}
+
+.blue-box-content span::after{
+    content: "\e906";
+    font-size: 1.8rem;
+    font-family: "icomoon";
+    color: white;
+    margin-left: 10px;
+}
+
+.textinput{
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    border-radius: 10px;
+    border: 1.5px solid #a295cb;
+}
+
+.bubble-img{
+    width: 40%;
+}
+
+.bubble-img img{
+    width: 100%;
+}
+
+.bubble-bottom{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.bubble-top{
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: rotate(-180deg)
+}
