--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,11 @@ body{
     font-family: 'Poppins',sans-serif;
 }
 
+main{
+    width: 100%;
+    height: 100%;
+}
+
 ul li {
     display: inline-block;
 }
